# LineExtraction

./: .bazelignore  .bazelrc  .clang-format  .clangd  .gitignore  .pre-commit-config.yaml  .project_env  .ruff.toml  .yamllint.yml  BAZEL.md  BAZEL_KNOWN_ISSUES.md  BAZEL_QUICKSTART.md  BAZEL_STATUS.md  BUILD.bazel  CMakeLists.txt  CMakeLists.txt.user.ivrjCq  Doxyfile.in  LICENSE  MODULE.bazel  README.md  build_clean.sh  param_set_state.md  paramset_state.md  projection_test.cpp  pyproject.toml
apps/line_analyzer/: BUILD.bazel  CMakeLists.txt  README.md  accuracypanel.cpp  accuracypanel.h  accuracypanel.ui  analyseroptions.cpp  analyseroptions.h  connectionoptimizer.cpp  connectionoptimizer.h  continuityoptimizer.cpp  continuityoptimizer.h  continuityoptimizer.ui  controlwindow.cpp  controlwindow.h  detectorprofilepanel.h  helpers.cpp  helpers.h  imageanalyzerpanel.h  latool.h  lineanalyser2d.cpp  lineanalyser2d.h  lineanalyser2d.ui  main.cpp  pofuncplot.cpp  pofuncplot.h  pofuncplot.ui  precisionoptimizer.cpp  precisionoptimizer.h  preprocessing.cpp  preprocessing.h  preprocessing.ui  profileanalyzer.cpp  profileanalyzer.h  quiver.cpp  quiver.h
bazel/: BUILD.bazel  README.md  features.bzl
evaluation/old/: CMakeLists.txt  color_test.cpp  color_test_2.cpp  even_parameter_test.cpp  filter_results.cpp  gradient_noise.cpp  gradient_orientation.cpp  image_denoise.cpp  line_fit_profiling.cpp  lsd_precision.cpp  phase_dc.cpp  segment_results.cpp  spe_precision.cpp  threshold_results.cpp
evaluation/performance/: BUILD.bazel  CMakeLists.txt  README.md  gpuConv.cpp  gpuFFT.cpp  gradient.cpp  laplace.cpp  laplace.cpp.bak  line_fit.cpp  lsd.cpp  main.cpp  main.cpp.save  nms.cpp  performance_test.hpp  segment.cpp  segment_eval.cpp  setups.md  spe.cpp  split.cpp  threshold.cpp
evaluation/python/: BUILD.bazel  README.md  results.md
evaluation/thesis/: BUILD.bazel  CMakeLists.txt  color_test_rcmg.cpp  color_test_sobel.cpp  even_parameter_test.cpp  filter_results.cpp  gradient_noise.cpp  gradient_orientation.cpp  gradient_performance.cpp  image_denoise.cpp  lsd_precision.cpp  phase_dc.cpp  spe_precision.cpp
examples/: CMakeLists.txt  README.md
examples/ceres/: CMakeLists.txt  calibration.cpp  ceres_cube_test.cpp  ceres_line_opti_test.cpp  ceres_line_slam_test.cpp  ceres_test.cpp  line_tracker_cv.cpp  line_tracker_cv_2.cpp  line_tracker_cv_2_nosplit.cpp  line_tracker_line.cpp  line_tracker_lsd.cpp  line_tracker_seed.cpp  line_tracker_split.cpp  line_tracker_split_1.cpp  test_line3.cpp
examples/edge/: BUILD.bazel  CMakeLists.txt  README.md  edge_precision.cpp  edge_test.cpp  nfa_test.cpp  nms_test.cpp  nms_variant_test.cpp  pattern_test.cpp  zc_test.cpp  zc_variant_test.cpp
examples/geometry/: BUILD.bazel  CMakeLists.txt  README.md  camera_test.cpp  gt_test.cpp  line_test.cpp  obj_test.cpp  poly_test.cpp  render_gl_tr_test.cpp  stereo_pluecker_test.cpp  stereo_test.cpp
examples/imgproc/: BUILD.bazel  CMakeLists.txt  README.md  fft_test.cpp  grad_test.cpp  noise_test.cpp  pyramid_test.cpp  steer_test.cpp  step_line_test.cpp
examples/lfd/: BUILD.bazel  CMakeLists.txt  README.md  cv3_linematching_test.cpp  dsc_test.cpp  generic_test.cpp  match_test.cpp  motion_match_test.cpp  pair_test.cpp  stereo_match_test.cpp  triangulation_test.cpp  video_cv_matching_test.cpp  video_match_test.cpp
examples/lsd/: BUILD.bazel  CMakeLists.txt  README.md  lsd.cpp  lsd_cc_test.cpp  lsd_edge.cpp  lsd_graph.cpp  lsd_nfa.cpp  lsd_video.cpp
examples/notebooks/: cv_primer.ipynb  demo_3d_recon_synthetic.ipynb  demo_3d_reconstruction.ipynb  demo_line_features.ipynb  demo_multiview_reconstruction.ipynb  demo_pytorch_esd.ipynb  demo_stereo_reconstruction.ipynb  demo_stereo_reconstruction_limap.ipynb  intro_cv_primer.ipynb  intro_line_extraction_overview.ipynb  line_extraction_bindings.ipynb  plan.md  pytorch_esd_demo.ipynb  rerun_lsd_demo.ipynb  tutorial_1_fundamentals.ipynb  tutorial_2_pipelines.ipynb  tutorial_3_evaluation.ipynb  tutorial_4_algorithm.ipynb  tutorial_5_advanced_filters.ipynb  tutorial_6_image_operators.ipynb  tutorial_7_3d_geometry.ipynb
examples/opengl_sim/: AccumAntiAlias.cpp  CMakeLists.txt  TextureTest.cpp  depth_gl_test.cpp  render_gl_all_gt_test.cpp  render_gl_matching_gt_test.cpp  render_gl_matching_test.cpp  render_gl_test.cpp  render_gl_tracker.cpp
examples/other/: BUILD.bazel  CMakeLists.txt  README.md  arpack_test.cpp  cvplot.cpp  cvplot.h  houghlines.cpp  line_opti.cpp  lsmatrxa.h  lsymsol.h  opencv_features.cpp  stats.h  test_dlib.cpp  utils.h
examples/qt/: BUILD.bazel  CMakeLists.txt  README.md  test_qplot3d.cpp
examples/stereo/: CMakeLists.txt  PnL_example.cpp  stereo_line_optimize.cpp  stereo_matcher.cpp
examples/thesis/: BUILD.bazel  CMakeLists.txt  derivative_filters.cpp  edge_seg.cpp  pyramid.cpp  steer_test.cpp  step_line_test.cpp  threshold.cpp  zc_example.cpp
libs/: CMakeLists.txt
libs/algorithm/: BUILD.bazel  CMakeLists.txt  README.md
libs/edge/: BUILD.bazel  CMakeLists.txt  README.md
libs/eval/: BUILD.bazel  CMakeLists.txt  README.md
libs/geometry/: BUILD.bazel  CMakeLists.txt  README.md
libs/imgproc/: BUILD.bazel  CMakeLists.txt  README.md
libs/lfd/: BUILD.bazel  CMakeLists.txt  README.md
libs/lsd/: BUILD.bazel  CMakeLists.txt  README.md
libs/opengl_sim/: CMakeLists.txt
libs/phase_cong/: CMakeLists.txt
libs/qplot/: CMakeLists.txt
libs/qplot3d/: CMakeLists.txt
libs/utility/: BUILD.bazel  CMakeLists.txt  README.md
python/: BUILD.bazel
python/lsfm/: BUILD.bazel  __init__.py  data.py  limap_compat.py  notebook.py  reconstruction.py
resources/: BUILD.bazel  README.md
resources/presets/: lsd_presets.json
src/: CMakeLists.txt
src/calc_PnL/: CMakeLists.txt  PnL.cpp  PnL.h  R_and_T.cpp  R_and_T.h  abs.cpp  abs.h  buildInfo.mat  calc_PnL.cpp  calc_PnL.h  calc_PnL_emxAPI.cpp  calc_PnL_emxAPI.h  calc_PnL_emxutil.cpp  calc_PnL_emxutil.h  calc_PnL_initialize.cpp  calc_PnL_initialize.h  calc_PnL_rtw.mk  calc_PnL_rtwutil.cpp  calc_PnL_rtwutil.h  calc_PnL_terminate.cpp  calc_PnL_terminate.h  calc_PnL_types.h  (+45 more)
test/: CMakeLists.txt
(+954 files in other folders)
