"""Doxygen documentation generation for Bazel.

This BUILD file defines a target to generate Doxygen documentation.
Run with: bazel run //:doxygen

The generated documentation includes:
- All library source code (libs/)
- Applications (apps/)
- Examples (examples/)
- Evaluation code (evaluation/)
- All README.md files throughout the project
- Documentation in docs/

Documentation output: docs/generated/html/index.html
"""

# Doxygen documentation generation
# Note: This requires doxygen to be installed on the host system
# Uses 'bazel run' to execute in the workspace directory
sh_binary(
    name = "doxygen",
    srcs = ["tools/scripts/generate_doxygen.sh"],
    data = [
        "Doxyfile.in",
        "README.md",
    ] + glob(
        [
            "libs/**/include/**/*.hpp",
            "libs/**/include/**/*.h",
            "libs/**/src/**/*.cpp",
            "libs/**/README.md",
            "apps/**/*.hpp",
            "apps/**/*.cpp",
            "apps/**/*.h",
            "apps/**/README.md",
            "examples/**/*.cpp",
            "examples/**/*.hpp",
            "examples/**/README.md",
            "evaluation/**/*.cpp",
            "evaluation/**/*.hpp",
            "evaluation/**/README.md",
            "docs/**/*.md",
        ],
        allow_empty = True,
    ),
    visibility = ["//visibility:public"],
)
