"""LineExtraction - A C++ library for line extraction and analysis"""

module(
    name = "line_extraction",
    version = "2026.01.17.dev0",
)

# Bazel Skylib - utilities
bazel_dep(name = "bazel_skylib", version = "1.9.0")

# Platform rules
bazel_dep(name = "platforms", version = "0.0.11")

# C++ rules
bazel_dep(name = "rules_cc", version = "0.2.15")

# Python rules
bazel_dep(name = "rules_python", version = "1.1.0")

# GoogleTest for C++ testing - updated to latest
bazel_dep(name = "googletest", version = "1.15.2")

# OpenCV from BCR - updated version with fixed libjpeg-turbo dependency
# NOTE: 4.12.0.bcr.1 uses libjpeg_turbo 3.1.3 which has SIMD linking fixes
bazel_dep(name = "opencv", version = "4.12.0.bcr.1")  # Minimum 4.12.0.bcr.1 required for photo module

# Force latest libjpeg_turbo with SIMD fixes (bcr.2 released 9 days ago)
bazel_dep(name = "libjpeg_turbo", version = "3.1.3.bcr.2")

# dlib from local registry (not in BCR)
bazel_dep(name = "dlib", version = "19.24.7")

# arpack++ from local registry - header-only C++ interface to ARPACK
# Requires system-installed arpack, lapack, blas libraries
bazel_dep(name = "arpackpp", version = "2.4.0")

# SuperLU from local registry - sparse direct solver
# Used by arpack++ for LU decomposition variants (ARluSymMatrix, etc.)
bazel_dep(name = "superlu", version = "7.0.1")

# pybind11 for Python bindings
bazel_dep(name = "pybind11_bazel", version = "2.13.6")

# HTTP archive for external dependencies
http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

new_local_repository = use_repo_rule("@bazel_tools//tools/build_defs/repo:local.bzl", "new_local_repository")

# Eigen - Linear algebra library
# Using manual http_archive due to BCR checksum issues
http_archive(
    name = "eigen",
    build_file = "//tools/bazel/third_party:eigen.BUILD",
    sha256 = "8586084f71f9bde545ee7fa6d00288b264a2b7ac3607b974e54d13e7162c1c72",
    strip_prefix = "eigen-3.4.0",
    urls = [
        "https://gitlab.com/libeigen/eigen/-/archive/3.4.0/eigen-3.4.0.tar.gz",
    ],
)

# Qt5 - GUI framework from system installation
new_local_repository(
    name = "qt5",
    build_file = "//tools/bazel/third_party:qt5.BUILD",
    path = "/usr",
)

# Note: dlib, opencv, and qt5 are now provided via local registry
# See tools/bazel/registry/modules/ for module definitions
# GCC and Clang selection is done via .bazelrc --config flags
