"""LineExtraction - A C++ library for line extraction and analysis"""

module(
    name = "line_extraction",
    version = "dev",
)

# Bazel Skylib - utilities
bazel_dep(name = "bazel_skylib", version = "1.9.0")

# Platform rules
bazel_dep(name = "platforms", version = "0.0.11")

# C++ rules
bazel_dep(name = "rules_cc", version = "0.2.15")

# Python rules
bazel_dep(name = "rules_python", version = "1.1.0")

# GoogleTest for C++ testing - updated to latest
bazel_dep(name = "googletest", version = "1.15.2")

# Google Benchmark for micro-benchmarking
bazel_dep(name = "google_benchmark", version = "1.9.1")

# OpenCV from local registry - patched to treat headers as system includes (-isystem)
# Based on BCR 4.12.0.bcr.1 with system_includes.patch applied
bazel_dep(name = "opencv", version = "4.12.0.bcr.1-LE")

# OpenCV Contrib modules from local registry (not in BCR)
# Provides: xfeatures2d (SIFT, SURF), line_descriptor, ximgproc
bazel_dep(name = "opencv_contrib", version = "4.12.0")

# Force latest libjpeg_turbo with SIMD fixes (bcr.2 released 9 days ago)
bazel_dep(name = "libjpeg_turbo", version = "3.1.3.bcr.2")

# dlib from local registry (not in BCR)
bazel_dep(name = "dlib", version = "19.24.7")

# arpack++ from local registry - header-only C++ interface to ARPACK
# Requires system-installed arpack, lapack, blas libraries
bazel_dep(name = "arpackpp", version = "2.4.0")

# SuperLU from local registry - sparse direct solver
# Used by arpack++ for LU decomposition variants (ARluSymMatrix, etc.)
bazel_dep(name = "superlu", version = "7.0.1")

# pybind11 for Python bindings
bazel_dep(name = "pybind11_bazel", version = "2.13.6")

# cvnp - pybind11 type_casters for cv::Mat <-> numpy with shared memory
# Provides zero-copy conversion for Mat, Mat_, plus casters for Matx, Vec,
# Size, Point, Point3, Scalar, Rect
bazel_dep(name = "cvnp", version = "1.0.0")

# =============================================================================
# Python toolchain and pip dependencies
# =============================================================================

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.12",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip",
    python_version = "3.12",
    requirements_lock = "//tools/bazel:requirements_lock.txt",
)
use_repo(pip, "pip")

# HTTP archive for external dependencies
http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

new_local_repository = use_repo_rule("@bazel_tools//tools/build_defs/repo:local.bzl", "new_local_repository")

# Eigen - Linear algebra library
# Using manual http_archive due to BCR checksum issues
http_archive(
    name = "eigen",
    build_file = "//tools/bazel/third_party:eigen.BUILD",
    sha256 = "8586084f71f9bde545ee7fa6d00288b264a2b7ac3607b974e54d13e7162c1c72",
    strip_prefix = "eigen-3.4.0",
    urls = [
        "https://gitlab.com/libeigen/eigen/-/archive/3.4.0/eigen-3.4.0.tar.gz",
    ],
)

# Qt5 - GUI framework from system installation
new_local_repository(
    name = "qt5",
    build_file = "//tools/bazel/third_party:qt5.BUILD",
    path = "/usr",
)

# GTK3 - for OpenCV highgui support (optional, Linux only)
# Install: sudo apt install libgtk-3-dev
new_local_repository(
    name = "ubuntu_gtk_deps",
    build_file = "@opencv//:test/ubuntu-gtk-deps.BUILD.bazel",
    path = "/",
)

# =============================================================================
# Datasets for evaluation and testing
# =============================================================================

# BSDS500 - Berkeley Segmentation Dataset 500
# Source: https://github.com/BIDS/BSDS500
# Contains 500 images with ground truth boundaries for edge/line detection evaluation
# Note: Using master branch archive - checksum may change if repo is updated
http_archive(
    name = "bsds500",
    build_file = "//tools/bazel/third_party:bsds500.BUILD",
    sha256 = "193bcb2d8993af8c6c799f73faead6f709f98f0011476ba3e2381ce30e1407d7",
    strip_prefix = "BSDS500-master",
    urls = [
        "https://github.com/BIDS/BSDS500/archive/refs/heads/master.zip",
    ],
)

# MDB (Middlebury Stereo Dataset) - NOT included as http_archive due to size
# Run: ./tools/scripts/setup_mdb_dataset.sh to download and prepare locally
# The script creates resources/datasets/MDB/ with MiddEval3-Q/H/F subdirectories

# Note: dlib, opencv, and qt5 are now provided via local registry
# See tools/bazel/registry/modules/ for module definitions
# GCC and Clang selection is done via .bazelrc --config flags
