"""Test resources for examples and tests."""

package(default_visibility = ["//visibility:public"])

# Single test image - windmill
filegroup(
    name = "windmill",
    srcs = ["windmill.jpg"],
)

# Synthetic example images with known line segments for accuracy evaluation
filegroup(
    name = "example_lines",
    srcs = ["example_lines.png"],
)

filegroup(
    name = "example_challenge",
    srcs = ["example_challenge.png"],
)

# Optimized detector parameter presets (fast / balanced / accurate)
filegroup(
    name = "presets",
    srcs = ["presets/lsd_presets.json"],
)
