"""Test resources for examples and tests."""

package(default_visibility = ["//visibility:public"])

# Single test image - windmill
filegroup(
    name = "windmill",
    srcs = ["windmill.jpg"],
)

# Office photo for demos and pipeline visualization
filegroup(
    name = "office",
    srcs = ["office.png"],
)

# Synthetic example images with known line segments for accuracy evaluation
filegroup(
    name = "synthetic_simple",
    srcs = ["synthetic_simple.png"],
)

filegroup(
    name = "synthetic_challenge",
    srcs = ["synthetic_challenge.png"],
)

# Optimized detector parameter presets (fast / balanced / accurate)
filegroup(
    name = "presets",
    srcs = ["presets/lsd_presets.json"],
)
